# flask-classful

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG  CHANGELOG.md  CHANGES.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  Makefile  README.md  README.rst  Vagrantfile  docker-compose.yml  flask_classful.py  flask_classy.py  pyproject.toml  requirements.txt  run-dev.sh  run-release.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint-test-docs.yaml  lint-test.yaml  publish.yaml  tests.yaml
.travis/: setup.sh
dev-setup/: .gitignore  README.md  vagrant_config_default.json
dev-setup/chef/: README.md  docker-compose.yml  run-dev.sh
dev-setup/chef/main-cookbooks/flask-classful/: .kitchen.yml  README.md  metadata.rb
dev-setup/chef/main-cookbooks/flask-classful/recipes/: default.rb  docs.rb  setup.rb
dev-setup/chef/main-cookbooks/flask-classful/spec/unit/recipes/: default_spec.rb
dev-setup/chef/main-cookbooks/flask-classful/test/smoke/default/: default_test.rb
docs/: CHANGELOG_sphinx_deployment.md  Dockerfile  Makefile  README_sphinx_deployment.md  conf.py  docker-compose.prod.yml  docker-compose.review.yml  docker-compose.yml  index.rst  release.rst  requirements-dev.txt  requirements.txt  run-dev.sh  sphinx_deployment.mk
docs/.deploy_heroku/: Gemfile
docs/.deploy_heroku/public/: 404.html
docs/_themes/flask/: layout.html  theme.conf
docs/_themes/flask/static/: classful-logo.sketch
docs/_themes/flask_small/: theme.conf
requirements/: dev.in  dev.txt  docs.txt  tests.in  tests.txt
src/flask_classful/: __init__.py
test_classful/: __init__.py  test_async.py  test_base_args.py  test_blueprints.py  test_bp_subdomains.py  test_common.py  test_decorators.py  test_default_methods.py  test_endpoints.py  test_excluded_methods.py  test_inheritance.py  test_init_argument.py  test_inspect_args.py  test_method_dashified.py  test_method_detection.py  test_register.py  test_representations.py  test_route_base.py  test_route_prefix.py  test_rule_options.py  test_subdomains.py  test_trailing_slash.py  test_view_wrappers.py  view_classes.py
test_classful_py3/: test_type_hints.py
test_classy/: test_representations.py  test_view_wrappers.py  view_classes.py
tests/: test_async.py  test_base_args.py  test_blueprints.py  test_bp_subdomains.py  test_common.py  test_decorators.py  test_default_methods.py  test_endpoints.py  test_excluded_methods.py  test_inheritance.py  test_init_argument.py  test_inspect_args.py  test_method_dashified.py  test_method_detection.py  test_register.py  test_representations.py  test_route_base.py  test_route_prefix.py  test_rule_options.py  test_subdomains.py  test_trailing_slash.py  test_type_hints.py  test_view_wrappers.py  view_classes.py
