[project]
name = "Flask-Classful"
version = "0.17.0.dev"
description = "Class based views for Flask"
readme = "README.md"
license = { file = "LICENSE.md" }
maintainers = [{ name = "Pallets Community Ecosystem", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=1",
]

[project.urls]
Documentation = "https://flask-classful.readthedocs.io"
Source = "https://github.com/pallets-eco/flask-classful/"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_classful"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["flask_classful", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # flake8-implicit-str-concat
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.isort]
force-single-line = true
